css/tutorial.css
/* Basic styles for the options page
 * Part of the CRX Options Page boilerplate
 *
 * Copyright 2013-2015 Zachary Yaro
 * Released under the MIT license
 * https://raw.github.com/zmyaro/crx-options-page/master/LICENSE.txt
 */

 #tutorialContent {
    margin: 0px !important;
    font-size: 12px;
    color: rgb(48, 57, 66);

    height: auto;

    margin-left: auto;
    margin-right: auto;
    width: 1000px;
    font-size: 1.2;
    font-family: 'Khula', 'sans-serif' !important;
    pointer-events: none;
}


.underline{
    background: linear-gradient(to top, rgba(198,203,222,.3) 50%, transparent 50%);
}

#wikiContent h1{
    font-family: 'Inter' !important;

    font-size: 30px;

}

#wikiContent h2{
    font-family: 'Inter' !important;
    font-size: 20px;
    font-weight: 500;

}

#wikiContent h3{
    font-family: 'Inter' !important;
    font-size: 18px;
    font-weight: 400;

}

.lighter{
    font-weight: 300;
    margin-left: 0px;
    color: #696969;
}

.lowertext{
    font-size: 20px;
}


#tutorialContent h1, #tutorialContent h2, #tutorialContent h3 {
    font-weight: normal;
    /*line-height: 1;*/
    -webkit-user-select: none;
            user-select: none;
    cursor: default;
    font-family: 'Inter' !important;

}
#tutorialContent h1 {
    font-size: 1.21em;
    margin: 12px 0 12px 0;
    line-height: 1.5em;
}
#tutorialContent h3 {
    font-size: 1.21em;
    margin-bottom: 0.8em;
    color: black;
    font-weight: 600;
}

#tutorialContent h2 {
    font-size: 1.21em;
    line-height: 1.5em;
    font-weight: 300;
    margin-bottom: 0.8em;
    color: black;
}

.feedbackSubtitle h2 {
    margin-bottom: 0.8em;    
    font-size: 1.11em;

}

#tutorialContent p {
    margin: 0.65em 0;
}

#tutorialContent header {
    background-image: url('Images/header2.png');
    background-size: 100%;
    background-repeat: no-repeat;
    height: 100px;
    overflow: hidden;
    background-position: bottom;
    opacity: 40%;
}

#tutorialContent .title{
    font-family: 'Futura', 'Khula', 'sans-serif';
    padding-bottom: 40px;
}


#wikiContent{
    /* width:min(900px, 50%); */
    width: max(calc(100vw - (420px + (4 * 105px))), calc(100vw - (25vw + (4 * 105px))));
    left: 105px;
    top: 105px;
    position: absolute;
    opacity: 20%;
    display: block;
}

#wikiContent #articleHeader {
    font-family: 'Inter', '', 'sans-serif';
    font-size: 24px;
    font-weight: 600;
}


#wikiContent p {
    text-indent:0px;
}


#textWall {
    border: 0px solid black;
}

#cover {position: fixed; height: 100%; width: 100%; top:0; left: 0; background: white; z-index:9999;}



.hebbiaDiv{
    /*box-shadow: 0px 0px 30px 10px #5ee4fe;
    box-shadow: 0px 0px 20px 0px #ddd;*/
    box-shadow:  0 calc(10px*0.625) calc(10px*3.5) 0 rgba(198,203,222,.45);/*, 0 0 0px 2000px rgba(255, 255, 255, 0.7);*/
    border-radius: calc(1px*0.5);
    pointer-events: none;
    /* We add 21px to account for the 21px top margin of the h1 header */
    /*padding: 1.4vh 3vw calc(21px + 1.4vh) 3vw;*/
    padding: 4vh 3vw 4vh 3vw;
    font-size: 1.5em;
    width: min(420px, 25vw);
    z-index: 100;
    position: fixed;
    background: white;
    right: 105px;
    height: auto;
    /*color:rgba(0,0,0,0.1); */
    /*border: 1px solid black;*/
    color:black;
    border-radius: 4px;
}

.hebbiaDiv * {
    pointer-events: auto;
}

.hebbiaDiv img {
    width: 15px;
}

#tutorialContent .button {
    box-shadow: 0px 0px 3px 3px #eee;
    background: rgba(78, 84, 109, 0.05);
    margin: 15px 0 !important;
    padding: 8px 16px 4px 16px;
    width: fit-content;
    margin: 2px;
    cursor: pointer;
    font-size: 16px;
}

#hebbiaDiv1{
    top: 105px;
}

.shortcut {
    background: rgba(198, 203, 222, 0.269);
    border: 2px solid rgb(103, 106, 120);

    display: inline-block;
    color: rgb(103, 106, 120);
    padding: 11px 17px 2px 17px;
    box-shadow: 2px 2px 0 1px rgb(198, 203, 222);
    margin: 25px 4px 4px 0px;
    font-size: 28px;
    border-radius: 4px;
}

.subsubtitle {
    font-size: 14px;
    color: #696969;
    font-style: italic;
}

